<resources>
    <string name="app_name">Frutapp</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="cart_btn_update">Update</string>
    <string name="cart_text_total">Total: </string>
    <string name="cart_text_remove">Remove</string>
    <string name="cart_text_checkout">Checkout</string>
    <string name="cart_text_quantity">Quantity:</string>
    <string name="cart_text_date">Date</string>
    <string name="cart_text_partials">Partial ship</string>
    <string name="cart_text_cancel">Cancelar</string>
    <string name="cart_text_continue">Continue</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
        AIzaSyBjT8DamHvea_7XSm3rAND8uJ_Q8CWbNrg
    </string>
</resources>
